--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 1124",
     "lint": "next lint",
     "prisma:db:push": "npx prisma db push",
     "postinstall": "prisma generate"
