--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ BASE_URL_PTIT='https://qldt.ptit.edu.vn'
 NEXTAUTH_SECRET='AHr7REDM/MqXVV5wrGq1Hx1Al4iSzzSRZf91S9g5XiI=er'
 PORT=1124
 NEXTAUTH_URL= 'http://14.225.218.92:3000/'#'http://localhost:${PORT}' #'https://nextjs-dangkytin.vercel.app/'
-NEXT_PUBLIC_SOCKET_URL='/'
+NEXT_PUBLIC_SOCKET_URL='14.225.218.92:3000'
 NEXT_PUBLIC_SOCKET_PATH='/api/socket'
 NEXT_PUBLIC_BASE_URL_PTIT='https://qldt.ptit.edu.vn'
 NEXT_PUBLIC_PORT=1124
