add ua header token generate to bypass api

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 # DATABASE_URL='mysql://l67kf9dfb04nv991ue58:pscale_pw_bD7HE6ijVZaeyPWBXZQtur0YicEx
-BASE_URL_PTIT='https://qldt.ptit.edu.vn'
-NEXTAUTH_SECRET='AHr7REDM/MqXVV5wrGq1Hx1Al4iSzzSRZf91S9g5XiI=er'
-PORT=1124
-NEXTAUTH_URL= 'http://14.225.218.92:3000'#'http://localhost:${PORT}' #'http://14.225.218.92:3000/'#'http://localhost:${PORT}' #'https://nextjs-dangkytin.vercel.app/'
+BASE_URL_PTIT=https://qldt.ptit.edu.vn
+NEXTAUTH_SECRET=AHr7REDM/MqXVV5wrGq1Hx1Al4iSzzSRZf91S9g5XiI=er
+PORT=3002
+NEXTAUTH_URL= http://14.225.218.92:3000#'http://localhost:${PORT}' #'http://14.225.218.92:3000/'#'http://localhost:${PORT}' #'https://nextjs-dangkytin.vercel.app/'
 NEXT_PUBLIC_SOCKET_URL=''
-NEXT_PUBLIC_SOCKET_PATH='/api/socket'
-NEXT_PUBLIC_BASE_URL_PTIT='https://qldt.ptit.edu.vn'
-NEXT_PUBLIC_PORT=1124
+NEXT_PUBLIC_SOCKET_PATH=/api/socket
+NEXT_PUBLIC_BASE_URL_PTIT=https://qldt.ptit.edu.vn
+NEXT_PUBLIC_PORT=3002
 #DATABASE_URL='mysql://l67kf9dfb04nv991ue58:pscale_pw_bD7HE6ijVZaeyPWBXZQtur0YicExxTx30FCrqmKeHxx@aws.connect.psdb.cloud/dangkytinptit?sslaccept=strict'
-DATABASE_URL='mysql://avnadmin:AVNS_cXOVbAS5ZontJt0uwTt@mysql-291f28f0-abc1234.g.aivencloud.com:18718/defaultdb?ssl-mode=REQUIRED'
+DATABASE_URL=mysql://avnadmin:AVNS_W2_7o4DWkve7HD9wbXr@mysql-2a69e343-zoocp123-59ce.b.aivencloud.com:12130/defaultdb?ssl-mode=REQUIRED
 
