--- a/.env
+++ b/.env
@@ -7,6 +7,5 @@ NEXT_PUBLIC_SOCKET_URL=''
 NEXT_PUBLIC_SOCKET_PATH=/api/socket
 NEXT_PUBLIC_BASE_URL_PTIT=https://qldt.ptit.edu.vn
 NEXT_PUBLIC_PORT=3002
-#DATABASE_URL='mysql://l67kf9dfb04nv991ue58:pscale_pw_bD7HE6ijVZaeyPWBXZQtur0YicExxTx30FCrqmKeHxx@aws.connect.psdb.cloud/dangkytinptit?sslaccept=strict'
-DATABASE_URL=mysql://avnadmin:AVNS_W2_7o4DWkve7HD9wbXr@mysql-2a69e343-zoocp123-59ce.b.aivencloud.com:12130/defaultdb?ssl-mode=REQUIRED
+DATABASE_URL=mysql://username:password@hostname:port/database_name?ssl-mode=REQUIRED
 
